force-app/main/default/objects/Account/fields/AvgDaysToAcceptQuote__c.field-meta.xml
<CustomField>
    <fullName>AvgDaysToAcceptQuote__c</fullName>
    <label>Délai Moyen d'Acceptation Devis (jours)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>