force-app/main/default/objects/Account/fields/AvgDiscountDemanded__c.field-meta.xml
<CustomField>
    <fullName>AvgDiscountDemanded__c</fullName>
    <label>Remise Moyenne Demandée (%)</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>