force-app/main/default/objects/Account/fields/AvgOrderValue__c.field-meta.xml
<CustomField>
    <fullName>AvgOrderValue__c</fullName>
    <label>Average Order Value</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>