force-app/main/default/objects/Account/fields/Complaints12Months__c.field-meta.xml
<CustomField>
    <fullName>Complaints12Months__c</fullName>
    <label>Complaints Last 12 Months</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>