force-app/main/default/objects/Account/fields/CustomerLoyaltyYears__c.field-meta.xml
<CustomField>
    <fullName>CustomerLoyaltyYears__c</fullName>
    <label>Ancienneté Client (années)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>