force-app/main/default/objects/Account/fields/CustomerTierScore__c.field-meta.xml
<CustomField>
    <fullName>CustomerTierScore__c</fullName>
    <label>Score Tier Client</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>