force-app/main/default/objects/Account/fields/DaysSinceLastPurchase__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLastPurchase__c</fullName>
    <label>Days Since Last Purchase</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>999</defaultValue>
</CustomField>