force-app/main/default/objects/Account/fields/DistinctProductsPurchased__c.field-meta.xml
<CustomField>
    <fullName>DistinctProductsPurchased__c</fullName>
    <label>Distinct Products Purchased</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>