force-app/main/default/objects/Account/fields/PurchaseFrequency__c.field-meta.xml
<CustomField>
    <fullName>PurchaseFrequency__c</fullName>
    <label>Fréquence d'Achat (12 mois)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>