force-app/main/default/objects/Account/fields/QuoteAcceptanceRate__c.field-meta.xml
<CustomField>
    <fullName>QuoteAcceptanceRate__c</fullName>
    <label>Quote Acceptance Rate (%)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <defaultValue>0</defaultValue>
</CustomField>