force-app/main/default/objects/Account/fields/RevenueGrowthRate__c.field-meta.xml
<CustomField>
    <fullName>RevenueGrowthRate__c</fullName>
    <label>Taux de Croissance CA (%)</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>