force-app/main/default/objects/Account/fields/TotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenue__c</fullName>
    <label>Chiffre d'Affaires Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>